# CronoVM

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: CronoVMConfig.cmake.in  check_cvm_freestanding.cmake  cortex_m_allowed_symbols.txt
cmake/toolchains/: riscv32-none-elf.cmake  thumbv6m-none-eabi.cmake  thumbv7m-none-eabi.cmake
docs/: NEXT.md  corpus.md  debugging.md  format.md  isa.md  memory.md  syscalls.md  translator.md
examples/embedder/: CMakeLists.txt  game.c  host.c
examples/installed_consumer/: CMakeLists.txt
include/: cvm.h
runtime/lib/: .gitignore  __config_site  __external_threading  build_cxxio.sh  build_picolibc.sh  cvm_alloc.h  cvm_cxxrt.cpp  cvm_cxxstl.cpp  cvm_float64.h  cvm_float64_rt.c  cvm_int64.h  cvm_int64_rt.c  cvm_intrin.h  picolibc.h
runtime/lib/libcxx/: VENDOR.md  vendor_libcxx.sh
runtime/lib/libcxx/include/v1/__algorithm/: simd_utils.h
runtime/lib/libcxx/src/: hash.cpp  regex.cpp
src/: cvm.c
tests/: test_allocator.c  test_cvm_call.c  test_e2e.c  test_fnptr_export.c  test_regions.c  test_rom.c  test_vm.c
tests/conformance/: conf_alias.c  conf_cpp_array.cpp  conf_cpp_basic.cpp  conf_cpp_exc.cpp  conf_cpp_exc_base.cpp  conf_cpp_inherit.cpp  conf_cpp_init.cpp  conf_cpp_invoke_spill.cpp  conf_cpp_lambda.cpp  conf_cpp_ptr.cpp  conf_cpp_rtti.cpp  conf_ctrl.c  conf_cxx_config.cpp  conf_float.c  conf_float_libcall.c  conf_fshl_i64.c  conf_int_intrin.c  conf_int_width.c  conf_mem.c  conf_narrow_div.c  conf_overflow.c  conf_overflow_wide.c  conf_phi_parallel.c  conf_pico.c  conf_pico_cpp_align.cpp  conf_pico_cpp_alloca_spill.cpp  conf_pico_cpp_atomic.cpp  conf_pico_cpp_atomic64.cpp  conf_pico_cpp_exc_ctor.cpp  conf_pico_cpp_exc_stdexc.cpp  conf_pico_cpp_exc_unwind.cpp  conf_pico_cpp_iostream.cpp  conf_pico_cpp_map.cpp  conf_pico_cpp_memory.cpp  conf_pico_cpp_string.cpp  conf_pico_cpp_variant_vector.cpp  conf_pico_cpp_vector.cpp  conf_pico_float_transcendental.c  conf_pico_stdio.c  conf_sat.c  (+12 more)
tests/corpus/: .gitignore  reduce.sh  run_corpus.sh
tests/fixtures/: abi64.c  abs.c  abs16.c  add.c  alloc_sum.c  alloca_swap.c  bitops.c  const_gep.c  coro_basic.c  coro_pingpong.c  counter.c  ctpop.c  dispatch_table.c  divmod.c  dup_operand.c  f64_basic.c  f64_fma.c  f64_slice.c  fib.c  fib_recursive.c  float_basic.c  float_mem.c  fnptr.c  fnptr_export.c  free_list.c  fsh_narrow.c  fsqrt.c  globptr.c  i64_basic.c  i64_muldiv.c  i64_slice.c  i64f64_gaps.c  long_branch.c  lower_intrin.c  many_args.c  max.c  mem_intrin.c  mulh.c  multi_link_helper.c  multi_link_main.c  (+25 more)
tools/cvm-cc/: CMakeLists.txt  cvm-cc.c
tools/cvm-dis/: CMakeLists.txt  cvm-dis.c
tools/cvm-fuzz/: CMakeLists.txt  cvm-fuzz.c
tools/translator/: CMakeLists.txt  fuzz_translate.c  llvm_c_compat.cpp  translator.c
